--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,3 +31,11 @@ body {
     text-wrap: balance;
   }
 }
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
